erDiagram
    ACCOUNTS {
        int account_id PK "계정 번호"
        string email UK "이메일"
        string password_hash "비밀번호 해시"
        enum role "계정 역할"
        enum status "계정 상태"
        bool email_verified "이메일 인증 여부"
        datetime last_login_at "최종 로그인 일시"
        datetime created_at "생성 일시"
        datetime updated_at "수정 일시"
    }
    CUSTOMER_PROFILES {
        int customer_id PK "고객 번호"
        int account_id FK,UK "계정 번호"
        string customer_name "고객 이름"
        string customer_phone "고객 전화번호"
        string default_receiver_name "기본 수령인 이름"
        string default_receiver_phone "기본 수령인 전화번호"
        string default_shipping_address "기본 배송 주소"
        bool marketing_agree "마케팅 수신 동의 여부"
        datetime created_at "생성 일시"
        datetime updated_at "수정 일시"
    }
    OWNER_PROFILES {
        int owner_id PK "점주 번호"
        int account_id FK,UK "계정 번호"
        string owner_name "점주 이름"
        string owner_phone "점주 전화번호"
        string business_number "사업자 번호"
        datetime created_at "생성 일시"
        datetime updated_at "수정 일시"
    }
    EMAIL_VERIFICATIONS {
        int email_verification_id PK "이메일 인증 번호"
        int account_id FK "계정 번호"
        string email "인증 대상 이메일"
        enum purpose "인증 목적"
        string verification_code "인증 코드"
        bool verified "인증 완료 여부"
        datetime expires_at "만료 일시"
        datetime verified_at "인증 완료 일시"
        datetime created_at "생성 일시"
    }
    FARMS {
        int farm_id PK "농장 번호"
        int owner_id FK "점주 번호"
        string farm_name "농장 이름"
        string farm_region "농장 지역"
        string farm_address "농장 주소"
        string farm_image_url "농장 이미지 URL"
        string farm_description "농장 설명"
        string delivery_policy "배송 정책"
        string return_policy "반품 정책"
        datetime created_at "생성 일시"
        datetime updated_at "수정 일시"
    }
    PRODUCTS {
        int product_id PK "상품 번호"
        int farm_id FK "농장 번호"
        string product_name "상품명"
        string fruit_type "과일 종류"
        string variety "품종"
        double package_unit_kg "포장 단위 kg"
        int base_price "기본 가격"
        enum product_status "상품 상태"
        string image_url "대표 이미지 URL"
        string product_description "상품 설명"
        datetime created_at "생성 일시"
        datetime updated_at "수정 일시"
    }
    ML_PREDICTIONS {
        int prediction_id PK "예측 번호"
        int farm_id FK "농장 번호"
        int product_id FK "상품 번호"
        int created_by_owner_id FK "예측 실행 점주 번호"
        json input_feature_json "입력 피처 JSON"
        json open_api_snapshot_json "Open API 스냅샷 JSON"
        date predicted_harvest_start "예측 수확 시작일"
        date predicted_harvest_end "예측 수확 종료일"
        double estimated_yield_kg "예상 수확량 kg"
        double suggested_reservable_min_kg "제안 예약 가능 최소 kg"
        double suggested_reservable_max_kg "제안 예약 가능 최대 kg"
        int recommended_price "추천 가격"
        double confidence "신뢰도"
        double safety_factor "안전 계수"
        string warning_message "주의 메시지"
        string model_version "모델 버전"
        datetime created_at "생성 일시"
    }
    HARVEST_SLOTS {
        int slot_id PK "수확 슬롯 번호"
        int farm_id FK "농장 번호"
        int product_id FK "상품 번호"
        int prediction_id FK "예측 번호"
        date confirmed_harvest_start "점주 확정 수확 시작일"
        date confirmed_harvest_end "점주 확정 수확 종료일"
        double confirmed_reservable_kg "점주 확정 예약 가능 kg"
        double reserved_kg "예약 점유 kg"
        double sold_kg "판매 확정 kg"
        int confirmed_price "점주 확정 판매가"
        string customer_notice "고객 고지 문구"
        enum slot_status "수확 슬롯 상태"
        datetime owner_confirmed_at "점주 확정 일시"
        datetime opened_at "오픈 일시"
        datetime closed_at "마감 일시"
        datetime created_at "생성 일시"
        datetime updated_at "수정 일시"
    }
    RESERVATIONS {
        int reservation_id PK "예약 번호"
        int customer_id FK "고객 번호"
        string reservation_no UK "예약 코드"
        enum reservation_status "예약 상태"
        datetime reserved_until "예약 점유 만료 일시"
        double total_reserved_kg "총 예약 kg"
        int total_amount "총 금액"
        datetime created_at "생성 일시"
        datetime updated_at "수정 일시"
    }
    RESERVATION_ITEMS {
        int reservation_item_id PK "예약 품목 번호"
        int reservation_id FK "예약 번호"
        int slot_id FK "수확 슬롯 번호"
        int package_count "포장 개수"
        double reserved_kg "예약 kg"
        int unit_price_snapshot "예약 시점 단가"
        int subtotal_amount "예약 품목 소계"
        datetime created_at "생성 일시"
    }
    ORDERS {
        int order_id PK "주문 번호"
        int reservation_id UK "전환 예약 번호"
        string order_no UK "주문 코드"
        enum order_status "주문 상태"
        int total_amount "총 결제 금액"
        string receiver_name "수령인 이름"
        string receiver_phone "수령인 전화번호"
        string shipping_address "배송 주소"
        string delivery_memo "배송 메모"
        datetime ordered_at "주문 일시"
        datetime paid_at "결제 완료 일시"
        datetime created_at "생성 일시"
        datetime updated_at "수정 일시"
    }
    ORDER_ITEMS {
        int order_item_id PK "주문 품목 번호"
        int order_id FK "주문 번호"
        int reservation_item_id UK "전환 예약 품목 번호"
        int package_count "주문 포장 개수"
        double ordered_kg "주문 kg"
        int unit_price "주문 단가"
        int subtotal_amount "주문 품목 소계"
        enum order_item_status "주문 품목 상태"
        datetime created_at "생성 일시"
        datetime updated_at "수정 일시"
    }
    PAYMENTS {
        int payment_id PK "결제 번호"
        int order_id FK "주문 번호"
        string payment_provider "결제 제공사"
        enum payment_method "결제 수단"
        enum payment_status "결제 상태"
        int requested_amount "요청 금액"
        int approved_amount "승인 금액"
        string mock_transaction_key "Mock 거래 키"
        string idempotency_key UK "멱등 키"
        datetime requested_at "요청 일시"
        datetime approved_at "승인 일시"
        datetime failed_at "실패 일시"
        string failure_reason "실패 사유"
        datetime created_at "생성 일시"
        datetime updated_at "수정 일시"
    }
    PROCUREMENTS {
        int procurement_id PK "발주 번호"
        int order_id UK "발주 원본 주문 번호"
        int farm_id FK "발주 대상 농장 번호"
        int owner_id FK "발주 담당 점주 번호"
        string procurement_no UK "발주 코드"
        enum procurement_status "발주 상태"
        datetime requested_at "발주 요청 일시"
        datetime response_deadline_at "응답 기한 일시"
        datetime decided_at "결정 일시"
        string rejected_reason "거절 사유"
        datetime created_at "생성 일시"
        datetime updated_at "수정 일시"
    }
    PROCUREMENT_ITEMS {
        int procurement_item_id PK "발주 품목 번호"
        int procurement_id FK "발주 번호"
        int order_item_id UK "발주 대상 주문 품목 번호"
        int requested_package_count "요청 포장 개수"
        double requested_kg "요청 kg"
        int approved_package_count "승인 포장 개수"
        double approved_kg "승인 kg"
        enum approval_status "품목 승인 상태"
        string owner_memo "점주 메모"
        datetime created_at "생성 일시"
        datetime updated_at "수정 일시"
    }
    QUALITY_INSPECTIONS {
        int quality_inspection_id PK "신선도 검사 번호"
        int procurement_item_id FK "발주 품목 번호"
        int owner_id FK "검사 점주 번호"
        string image_url "검사 이미지 URL"
        enum model_grade "모델 예측 등급"
        double freshness_score "신선도 점수"
        double color_score "색상 점수"
        double roundness_score "둥근 정도 점수"
        double bruise_probability "멍 확률"
        enum model_decision "모델 판정"
        enum owner_confirmed_grade "점주 확정 등급"
        enum owner_decision "점주 확정 판정"
        string model_version "모델 버전"
        datetime inspected_at "검사 일시"
        datetime created_at "생성 일시"
    }
    SHIPMENTS {
        int shipment_id PK "배송 번호"
        int order_id UK "주문 번호"
        string carrier_name "택배사명"
        string tracking_no "송장 번호"
        int shipped_package_count "발송 포장 개수"
        double shipped_kg "발송 kg"
        enum shipment_status "배송 상태"
        datetime shipped_at "발송 일시"
        datetime delivered_at "배송 완료 일시"
        datetime created_at "생성 일시"
        datetime updated_at "수정 일시"
    }
    RETURN_REQUESTS {
        int return_request_id PK "반품 요청 번호"
        int order_id FK "주문 번호"
        string return_no UK "반품 코드"
        enum return_status "반품 상태"
        string reason_code "사유 코드"
        string reason_detail "사유 상세"
        string evidence_image_url "증빙 이미지 URL"
        int requested_amount "요청 금액"
        int approved_amount "승인 금액"
        string decision_reason "결정 사유"
        datetime requested_at "요청 일시"
        datetime decided_at "결정 일시"
        datetime created_at "생성 일시"
        datetime updated_at "수정 일시"
    }
    REFUNDS {
        int refund_id PK "환불 번호"
        int return_request_id UK "반품 요청 번호"
        int payment_id FK,UK "결제 번호"
        enum refund_status "환불 상태"
        int requested_amount "요청 금액"
        int refunded_amount "환불 금액"
        datetime requested_at "요청 일시"
        datetime completed_at "완료 일시"
        string failure_reason "실패 사유"
        datetime created_at "생성 일시"
        datetime updated_at "수정 일시"
    }

    ACCOUNTS ||--o| CUSTOMER_PROFILES : "고객 프로필 확장(extends_customer_profile)"
    ACCOUNTS ||--o| OWNER_PROFILES : "점주 프로필 확장(extends_owner_profile)"
    ACCOUNTS ||--o{ EMAIL_VERIFICATIONS : "이메일 인증 이력 보유(has_email_verifications)"
    OWNER_PROFILES ||--o{ FARMS : "농장 소유(owns_farms)"
    FARMS ||--o{ PRODUCTS : "상품 판매(sells_products)"
    FARMS ||--o{ ML_PREDICTIONS : "ML 예측 대상 농장(targets_farm_for_ml)"
    PRODUCTS ||--o{ ML_PREDICTIONS : "ML 예측 대상 상품(targets_product_for_ml)"
    OWNER_PROFILES ||--o{ ML_PREDICTIONS : "ML 예측 실행(runs_ml_prediction)"
    FARMS ||--o{ HARVEST_SLOTS : "수확 슬롯 개설(opens_harvest_slots)"
    PRODUCTS ||--o{ HARVEST_SLOTS : "상품 수확 슬롯 배정(assigns_harvest_slot)"
    ML_PREDICTIONS ||--o{ HARVEST_SLOTS : "수확 슬롯 제안 근거(suggests_harvest_slot)"
    CUSTOMER_PROFILES ||--o{ RESERVATIONS : "예약 요청(requests_reservation)"
    RESERVATIONS ||--|{ RESERVATION_ITEMS : "예약 품목 포함(contains_reservation_items)"
    HARVEST_SLOTS ||--o{ RESERVATION_ITEMS : "예약 대상 슬롯(reserves_harvest_slot)"
    RESERVATIONS ||--o| ORDERS : "주문 전환(converts_to_order)"
    ORDERS ||--|{ ORDER_ITEMS : "주문 품목 포함(contains_order_items)"
    RESERVATION_ITEMS ||--o| ORDER_ITEMS : "예약 품목 주문 전환(converts_to_order_item)"
    ORDERS ||--o{ PAYMENTS : "결제 시도(attempts_payment)"
    ORDERS ||--o| PROCUREMENTS : "발주 생성(creates_procurement)"
    FARMS ||--o{ PROCUREMENTS : "발주 대상 농장(targets_farm_for_procurement)"
    OWNER_PROFILES ||--o{ PROCUREMENTS : "발주 담당 점주(assigned_owner_for_procurement)"
    PROCUREMENTS ||--|{ PROCUREMENT_ITEMS : "발주 품목 포함(contains_procurement_items)"
    ORDER_ITEMS ||--o| PROCUREMENT_ITEMS : "발주 대상 주문 품목(procures_order_item)"
    PROCUREMENT_ITEMS ||--o{ QUALITY_INSPECTIONS : "신선도 검사 대상(inspects_procurement_item)"
    OWNER_PROFILES ||--o{ QUALITY_INSPECTIONS : "신선도 검사 수행(performs_quality_inspection)"
    ORDERS ||--o| SHIPMENTS : "배송 생성(creates_shipment)"
    ORDERS ||--o{ RETURN_REQUESTS : "반품 요청 생성(creates_return_request)"
    RETURN_REQUESTS ||--o| REFUNDS : "환불 요청 연결(creates_refund)"
    PAYMENTS ||--o{ REFUNDS : "환불 대상 결제(refunds_payment)"
